--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="plugins/slick/slick-theme.css">
   
   <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="https://github.com/iamsandralima/eCommerce-mini./style.css">
+  <link rel="stylesheet" href="https://github.com/iamsandralima/eCommerce-mini/style.css">
 
 </head>
 
