--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 					<!-- Home -->
 					<li class="dropdown ">
-						<a href="https://github.com/iamsandralima/eCommerce-mini/index.html">Home</a>
+						<a href="index.html">Home</a>
 					</li><!-- / Home -->
 
 
