--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="https://github.com/iamsandralima/eCommerce-mini/images/1.fav.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/images/1.fav.png">
   
   <!-- Themefisher Icon font -->
   <link rel="stylesheet" href="plugins/themefisher-font/style.css">
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="plugins/slick/slick-theme.css">
   
   <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="https://github.com/iamsandralima/eCommerce-mini/style.css">
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 
