--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="/images/1.fav.png">
+  <link rel="shortcut icon" type="image/x-icon" href="./images/1.fav.png">
   
   <!-- Themefisher Icon font -->
   <link rel="stylesheet" href="plugins/themefisher-font/style.css">
@@ -36,7 +36,7 @@
 <!-- Start Top Header Bar -->
 				<!-- Site Logo -->
 				<div class="logo text-center">
-          <img width="140px" height="135px" src="/images/logo.png" alt="logo Mood Store" ><img>
+          <img width="140px" height="135px" src="./images/logo.png" alt="logo Mood Store" ><img>
 			</div>
 			<div class="col-md-4 col-xs-12 col-sm-4">
 				<!-- Cart -->
@@ -48,7 +48,7 @@
 							<!-- Cart Item -->
 							<div class="media">
 								<a class="pull-left" href="#!">
-									<img class="media-object" src="/images/cart-1.jpeg" alt="image" />
+									<img class="media-object" src="./images/cart-1.jpeg" alt="image" />
 								</a>
 								<div class="media-body">
 									<h4 class="media-heading"><a href="#!">Ladies Bag</a></h4>
@@ -64,7 +64,7 @@
 							<!-- / Cart Item -->
 							<div class="media">
 								<a class="pull-left" href="#!">
-									<img class="media-object" src="/images/cart-2.jpeg" alt="image" />
+									<img class="media-object" src="./images/cart-2.jpeg" alt="image" />
 								</a>
 								<div class="media-body">
 									<h4 class="media-heading"><a href="#!">Ladies Bag</a></h4>
@@ -203,7 +203,7 @@
 								<!-- Mega Menu -->
 								<div class="col-sm-3 col-xs-12">
 									<a href="shop.html">
-										<img class="img-responsive" src="/images/menus.jpg" alt="menu image" />
+										<img class="img-responsive" src="./images/menus.jpg" alt="menu image" />
 									</a>
 								</div>
 							</div><!-- / .row -->
@@ -229,7 +229,7 @@
 </section>
 
 <div class="hero-slider">
-  <div class="slider-item th-fullpage hero-area" style="background-image: url(/images/header..png);">
+  <div class="slider-item th-fullpage hero-area" style="background-image: url(./images/header..png);">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 text-left">
@@ -240,7 +240,7 @@
       </div>
     </div>
   </div>
-  <div class="slider-item th-fullpage hero-area" style="background-image: url(/images/slider-3.png);">
+  <div class="slider-item th-fullpage hero-area" style="background-image: url(./images/slider-3.png);">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 text-right">
@@ -264,7 +264,7 @@
 			<div class="col-md-6">
 				<div class="category-box">
 					<a href="#!">
-						<img src="/images/category-1.png" alt="" />
+						<img src="./images/category-1.png" alt="" />
 						<div class="content">
 						  <h3>Camisetas</h3>
 						</div>
@@ -272,7 +272,7 @@
 				</div>
 				<div class="category-box">
 					<a href="#!">
-						<img src="/images/category2.png2.png" alt="" />
+						<img src="./images/category2.png2.png" alt="" />
 						<div class="content">
 							<h3>Tendências</h3>
 						</div>
@@ -282,7 +282,7 @@
 			<div class="col-md-6">
 				<div class="category-box category-box-2">
 					<a href="#!">
-						<img src="/images/category3.png" alt="" />
+						<img src="./images/category3.png" alt="" />
 						<div class="content">
 							<h3>Sale</h3>
 						</div>
@@ -306,7 +306,7 @@
 				<div class="product-item">
 					<div class="product-thumb">
 						<span class="bage">Sale</span>
-						<img class="img-responsive" src="/images/product-1.jpg" alt="product-img" />
+						<img class="img-responsive" src="./images/product-1.jpg" alt="product-img" />
 						<div class="preview-meta">
 							<ul>
 								<li>
@@ -332,7 +332,7 @@
 			<div class="col-md-4">
 				<div class="product-item">
 					<div class="product-thumb">
-						<img class="img-responsive" src="/images/product-2.jpg" alt="product-img" />
+						<img class="img-responsive" src="./images/product-2.jpg" alt="product-img" />
 						<div class="preview-meta">
 							<ul>
 								<li>
@@ -358,7 +358,7 @@
 			<div class="col-md-4">
 				<div class="product-item">
 					<div class="product-thumb">
-						<img class="img-responsive" src="/images/product-3.jpg" alt="product-img" />
+						<img class="img-responsive" src="./images/product-3.jpg" alt="product-img" />
 						<div class="preview-meta">
 							<ul>
 								<li>
@@ -410,7 +410,7 @@
 			<div class="col-md-4">
 				<div class="product-item">
 					<div class="product-thumb">
-						<img class="img-responsive" src="/images/product-5.jpg" alt="product-img" />
+						<img class="img-responsive" src="./images/product-5.jpg" alt="product-img" />
 						<div class="preview-meta">
 							<ul>
 								<li>
@@ -436,7 +436,7 @@
 			<div class="col-md-4">
 				<div class="product-item">
 					<div class="product-thumb">
-						<img class="img-responsive" src="/images/product-6.jpg" alt="product-img" />
+						<img class="img-responsive" src="./images/product-6.jpg" alt="product-img" />
 						<div class="preview-meta">
 							<ul>
 								<li>
@@ -474,7 +474,7 @@
 			        	<div class="row">
 			        		<div class="col-md-8 col-sm-6 col-xs-12">
 			        			<div class="modal-image">
-				        			<img  height="80px" class="img-responsive" src="/images/vestido.1.jpeg" alt="product-img" />
+				        			<img  height="80px" class="img-responsive" src="./images/vestido.1.jpeg" alt="product-img" />
 			        			</div>
 			        		</div>
 			        		<div class="col-md-4 col-sm-6 col-xs-12">
@@ -533,9 +533,9 @@
 					<p>A Mood Store  é uma marca digital fundada pela Gio ferreira.<br> 
 						Somos uma loja online de moda bem diferentona de tudo que você já viu.</p>
 				</div>
-				<img class="img-time" src="/images/team-1.jpg" alt="time-img" />
-				<img class="img-time" src="/images/team-2.jpg" alt="time-img" />
-				<img class="img-time" src="/images/team-3.jpg" alt="time-img" />
+				<img class="img-time" src="./images/team-1.jpg" alt="time-img" />
+				<img class="img-time" src="./images/team-2.jpg" alt="time-img" />
+				<img class="img-time" src="./images/team-3.jpg" alt="time-img" />
 			</div>
 		</div>	
 		</section>
@@ -615,7 +615,7 @@
     <script src="plugins/slick/slick-animation.min.js"></script>
 
     <!-- Main Js File -->
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 		    
   </body>
   </html>
